--- a/Web.config
+++ b/Web.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <add name="grobotConnectionString" connectionString="Data Source=97.126.102.150,50612;Initial Catalog=grobot;Persist Security Info=True;User ID=TestLog;Password=greeneden"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
