--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="FirebaseDatabase.net" version="4.0.4" targetFramework="net472" />
   <package id="FirebaseDatabase.Platform.net" version="3.0.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
@@ -16,6 +17,8 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="MySql.Data" version="6.10.9" targetFramework="net472" />
+  <package id="MySql.Data.Entity" version="6.10.9" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
